# TestFightingGame

./: .gitignore  Bat.cpp  CMakeLists.txt  Enemy.cpp  Player.cpp  README.md  Rat.cpp  TestFightingGame  TestFightingGame.cpp  TestFightingGame.sln  TestFightingGame.vcxproj  TestFightingGame.vcxproj.filters  TestGame.sln  TestGame.vcxproj  TestGame.vcxproj.filters  a.out  enemy.json  helper.cpp  helper.h  section11.cpp  test.cpp
classes/: Enemy.cpp  Enemy.h  Player.cpp  Player.h  Room.cpp
headers/: helper.h
src/: Player.cpp  TestFightingGame.cpp  game.cpp  helper.cpp  main.cpp  test_game.cpp
src/classes/: CMakeLists.txt  Enemy.cpp  Item.cpp  Player.cpp
src/enemy_data/: bat.txt
src/headers/: Enemy.h  Item.h  Player.h  helper.h
src/json/: enemy.json
test/: test.cpp
tests/: Player_test.cpp
